kubernetes/ingress/ingress.yaml
## Public ingress via AWS Load Balancer Controller. Routes:
##   api.sentinelgrid.gov     → api-gateway
##   console.sentinelgrid.gov → dashboard-ui (with mTLS for operators)

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentinelgrid-public
  namespace: sg-platform
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:ACCOUNT_ID:certificate/CERT_ID
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-1:ACCOUNT_ID:regional/webacl/sentinelgrid/WAF_ID
    alb.ingress.kubernetes.io/shield-advanced-protection: "true"
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http.drop_invalid_header_fields.enabled=true,access_logs.s3.enabled=true,access_logs.s3.bucket=sentinelgrid-primary-audit
spec:
  rules:
    - host: api.sentinelgrid.gov
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: api-gateway,  port: { number: 8000 } } }
    - host: console.sentinelgrid.gov
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: dashboard-ui, port: { number: 80 } } }
